kube/mysql-deployment.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-client
spec:
  containers:
    - name: mysql-client
      image: quay.io/ukhomeofficedigital/mysql:5.7.0
      imagePullPolicy: IfNotPresent
      securityContext:
        runAsNonRoot: true
