kube/jsarc-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jsarc
spec:
  selector:
    name: jsarc
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 32000
