kube/jsarc-theme-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jsarc
  labels:
    stable.k8s.psg.io/kcm.class: default
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: "nginx-external"
spec:
  tls:
    - hosts:
        - jsarc-theme.notprod.jsarc.homeoffice.gov.uk
      secretName: jsarctheme
  rules:
    - host: jsarc-theme.notprod.jsarc.homeoffice.gov.uk
      http:
        paths:
          - backend:
              serviceName: jsarc
              servicePort: 8080
            path: /
