kube/jsarc-networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-network-policy-jsarc
spec:
  podSelector:
    matchLabels:
      name: jsarc
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-external
      ports:
        - protocol: TCP
          port: 8081
